css/style.css
/* ... */
.footer-container > .footer-rights {
  color: var(--very-dark-gray);
}

.attribution {
  width: 90vw;
  margin: 0 auto;
  padding: 2rem 0;

  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: .5rem;
}

.attribution > p {
  color: var(--dark-gray);

  display: flex;
  gap: .5rem;
  align-items: center;
}

.attribution a {
  color: var(--white);
}

.attribution i {
  font-size: 1.4rem;
}

/* Hover Animation ========================================= */
#creations > .button-container > button:hover {
  color: var(--white);
  border-color: var(--black);
  background-color: var(--black);
}

.links > *, .social-medias > *, .attribution > p > a
{
  position: relative;
}

.links > *::before, .social-medias > *::before, .attribution > p > a::before 
{
  content: "";
  display: block;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  position: absolute;
  background-color: var(--white);

  transform: scaleX(0);
  transition: transform .3s;
}

.links > *:hover:before, .social-medias > *:hover::before, .attribution > p > a:hover::before
{
  transform: scaleX(1);
}

#creations > .cards:hover > .card-overlay {
  background-color: var(--white);
  opacity: .7;
}

#creations > .cards:hover > h3 {
  color: var(--black);
}

/* Desktop Screen ========================================= */
@media (min-width: 801px) {
  /* Header ================ */
  header {
    background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/desktop/image-hero.jpg') top center no-repeat;
    background-size: cover;
    height: max(70vh, 650px);
    margin-bottom: 10rem;
  }
  nav > ul {
    gap: 2rem;
  }
  .header-container {
    padding: 4rem 0;
  }
  .header-title-container {
    width: 650px;
  }
  .header-title-container > h1 {
    font-size: 4.5rem;
    padding: 2rem;
    letter-spacing: .4rem;
  }

  /* Title ================ */
  .title {
    font-size: 3rem;
  }

  /* About ================ */
  section#about {
    width: min(90vw, 1200px);
    height: calc(504px + 75px);
    margin: 0 auto 10rem auto;
  }
  #about > .image-interactive {
    width: 100%;
  }
  #about > .image-interactive > img {
    display: block;
    max-width: 700px;
    width: 100%;
  }
  #about > .about-content {
    max-width: 700px;
    position: relative;
    top: -15rem;
    margin-left: auto;
    z-index: 1;
    
    background-color: var(--white);
    padding: 5rem;
  }
  #about > .about-content > h2 {
    margin-bottom: 2rem;
  }
  #about > .about-content > p {
    font-size: 1.25rem;
  }
  
  /* Our Creations ================ */
  #creations {
    width: min(90vw, 1200px);
    margin: 0 auto 10rem auto;

    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 2rem;
  }
  #creations > .title {
    grid-column: 1 / 3;
    margin-bottom: 4rem;
  }
  #creations > .button-container {
    grid-column: 3 / 5;
    margin-bottom: 4rem;

    display: flex;
    justify-content: flex-end;
    align-items: flex-start;
  }
  #creations > .button-container > button {
    font-size: 1.15rem;
  }

  /* Creations Cards ================ */
  #creations > .cards {
    height: 500px;
    background-color: var(--black);
    box-shadow: inset 0 -8rem 5rem rgba(0, 0, 0, .6);

    display: flex;
    align-items: center;
  }
  #creations > .cards > h3 {
    width: 80%;
    height: 85%;
    margin: 0 auto;
    font-size: min(2.5rem, 3vw);

    display: flex;
    align-items: flex-end;
  }
  #creations > .cards:nth-of-type(1) {
    background-image: url('../images/desktop/image-deep-earth.jpg');
  }
  #creations > .cards:nth-of-type(2) {
    background-image: url('../images/desktop/image-night-arcade.jpg');
  }
  #creations > .cards:nth-of-type(3) {
    background-image: url('../images/desktop/image-soccer-team.jpg');
  }
  #creations > .cards:nth-of-type(4) {
    background-image: url('../images/desktop/image-grid.jpg');
  }
  #creations > .cards:nth-of-type(5) {
    background-image: url('../images/desktop/image-from-above.jpg');
  }
  #creations > .cards:nth-of-type(6) {
    background-image: url('../images/desktop/image-pocket-borealis.jpg');
  }
  #creations > .cards:nth-of-type(7) {
    background-image: url('../images/desktop/image-curiosity.jpg');
  }
  #creations > .cards:nth-of-type(8) {
    background-image: url('../images/desktop/image-fisheye.jpg');
  }

  /* Footer ================ */
  .footer-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.5rem 1rem;

    padding: 3rem 0 4rem 0;
  }
  .footer-container > .footer-links {
    display: flex;
    gap: 1.5rem;
  }
  .footer-container > .footer-links > li {
    font-size: 1.1rem;
  }
  .footer-container > .social-medias {
    justify-content: flex-end; 
  }
  .footer-container > .footer-rights {
    text-align: right;
  }
  .footer-container > .footer-rights > p {
    font-size: 1.2rem;
  }

  .attribution > p {
    font-size: 1.3rem;
  }
}

@media (max-width: 900px) and (min-width: 801px) {
  #about > .about-content {
    top: -10rem;
  }
}
/* ... */

